--- a/calculateArea/calculate_Area.html
+++ b/calculateArea/calculate_Area.html
@@ -9,10 +9,24 @@
 
   <label for="width">Enter the width: </label>
   <input type="number" id="width"><br><br>
+  
+  <p id="result"></p>
 
   <button onclick="calculateArea()">Calculate Area</button><br><br>
 
-  <p id="result"></p>
+  <label for="grocery1">Enter Grocery-1 Amount: </label>
+  <input type="number" id="grocery1"><br><br>
+
+  <label for="grocery2">Enter Grocery-2 Amount: </label>
+  <input type="number" id="grocery2"><br><br>
+
+  <label for="grocery3">Enter Grocery-3 Amount: </label>
+  <input type="number" id="grocery3"><br><br>
+
+  <button onclick="totalAmount()">Calculate Area</button><br><br>
+
+  <p id="total"></p>
+  
 <script src="./calculate_Area.js"></script>
 </body>
 </html>
